smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-empty-namespace.smithy
// Parse error at line 6, column 5 near `#`: Unexpected syntax
$version: "1.0.0"

namespace smithy.example

use #
